--- a/example_confs/solarpowerlog.conf
+++ b/example_confs/solarpowerlog.conf
@@ -31,7 +31,7 @@ application:
 inverter :
 {
 	 inverters = ( 
-  		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the programm)
+  		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
   		  name   = "Inverter_1";
   		  
   		  # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
