--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -31,7 +31,7 @@ application:
 inverter :
 {
 	 inverters = ( 
-  		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the programm)
+  		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the program)
   		  name   = "Netcat";
   		  dbglevel = "INFO";
     
