--- a/configure.in
+++ b/configure.in
@@ -68,6 +68,21 @@ else
 	AC_MSG_NOTICE([Support for Sputnik inverters disabled as requested.])
 fi
 
+# Dummy Inverter
+AC_ARG_ENABLE([dummyinverter],
+    [AS_HELP_STRING([--disable-dummyinverter],
+            [Do not support the dummy inverter.])
+    ]
+)
+
+if test "x$enable_dummyinverter" != "xno" ; then
+    AC_DEFINE([HAVE_INV_DUMMY], [1], [Dummy inverter support])  
+    enable_dummyinverter=yes
+else
+    AC_MSG_NOTICE([Dummy inverter support disabled as requested.])
+fi
+
+
 ## Filters / Dumpers
 
 # CSV Writer
@@ -305,6 +320,7 @@ AC_MSG_NOTICE([Commandline options: ....................... $enable_commandlineo
 
 AC_MSG_NOTICE([INVERTERS:]);
 AC_MSG_NOTICE([Sputnik support: ........................... $enable_sputnik])
+AC_MSG_NOTICE([Dummy inverter: ............................ $enable_dummyinverter])
 
 AC_MSG_NOTICE([COMMUNICATIONS:]);
 AC_MSG_NOTICE([TCP/IP: .................................... $enable_tcpcomms])
