--- a/example_confs/solarpowerlog.conf
+++ b/example_confs/solarpowerlog.conf
@@ -1,15 +1,16 @@
 # This is a sample configuation file for solarpowerlog.
 #
-# Please note, the file is parsed by libconfig.
+# The file is parsed by libconfig, so for the grammar see
+# http://www.hyperrealm.com/libconfig/
 
-# Currently, this is quite boring -- as under developement.
-
+# The application section is for global configuration.
+#
 application:
 {
 	
-	# what debuglevel should be used if not specified by any component
-	# Choose out of ALL, TRACE, DEBUG, INFO, WARN, ERROR ,FATAL and NONE
-	# optional. If not given, it defaults to "ERROR"
+	# (optional) what debuglevel should be used if not specified by any component
+	# Choose out of ALL, TRACE, DEBUG, INFO, WARN, ERROR, FATAL and NONE
+	# If not given, it defaults to "ERROR"
 	# Note, if specified a logconfig file, the config file can override this 
 	# setting.
 	dbglevel = "ALL";
@@ -24,8 +25,7 @@ application:
 	# configuration in xml-format, which allows even more tweaks.  
 	#logconfig = "solarpowerlog_lib4cxx.conf";
 	#logconfig = "solarpowerlog_lib4cxx.xml";
-	
-	
+		
 };
 
 inverter :
@@ -76,6 +76,10 @@ inverter :
           # The value can be a float.  
           # This value is optional and defaults to 5 seconds
           queryinterval= 5;
+
+	  # As an example how to override the debug level, you can specify for any inverter its own log level...
+	  # dbglevel = "ALL";
+
 		}
 /*		,
 		{
@@ -324,14 +328,3 @@ logger:
 		);
 };
 
-# Just for reference -- taken from the libconfig sample.conf
-# 
-#
-# books = ( { name   = "Treasure Island";
-#               author =  "Robert Louis Stevenson";
-#               price  =  29.95;
-#               qty    =  5; },
-#             { name   = "Snow Crash";
-#               author =  "Neal Stephenson";
-#               price  =  9.99;
-#               qty    =  8; } );
