--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: solarpowerlog
 Section: utils
 Priority: extra
 Maintainer: Tobias Frost <tobi@coldtobi.de>
-Build-Depends: debhelper (>= 7), autotools-dev, libtool, automake, autoconf, pkg-config, libconfig++8-dev, libboost-dev, libboost-system-dev, libboost-thread-dev, libboost-program-options-dev, liblog4cxx10-dev, libdbi-dev
+Build-Depends: debhelper (>= 7), autotools-dev, libtool, automake, autoconf, pkg-config, libconfig++8-dev, libboost-dev, libboost-system-dev, libboost-thread-dev, libboost-program-options-dev, liblog4cxx10-dev, libdbi-dev, git
 Standards-Version: 3.9.1
 Homepage: http://solarpowerlog.coldtobi.de
 Vcs-Browser: http://solarpowerlog.git.sourceforge.net/git/gitweb-index.cgi
