--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,7 @@ Inverters/interfaces/CNestedCapaIterator.cpp \
 Inverters/interfaces/ICapaIterator.cpp Inverters/interfaces/InverterBase.cpp \
 patterns/ICommandTarget.cpp patterns/IValue.cpp patterns/ICommand.cpp \
 patterns/IObserverObserver.cpp patterns/IObserverSubject.cpp \
-configuration/CConfigHelper.cpp 
+configuration/CConfigHelper.cpp ctemplate/ctemplate.c
 
 solarpowerlog_CPPFLAGS = $(CONFIG_CFLAGS) $(LOG4CXX_CFLAGS) $(APR_CFLAGS) \
 	$(APRUTIL_CFLAGS) $(CTEMPLATE_CFLAGS)
@@ -46,22 +46,22 @@ solarpowerlog_CPPFLAGS = $(CONFIG_CFLAGS) $(LOG4CXX_CFLAGS) $(APR_CFLAGS) \
 solarpowerlog_LDADD = $(CONFIG_LIBS) $(LOG4CXX_LIBS) $(APR_LIBS) \
 	$(APRUTIL_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIBS) \
 	$(BOOST_DATE_TIME_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_ASIO_LIBS) \
-	$(BOOST_PROGRAM_OPTIONS_LIBS) $(WIN32_LIBS) -L../extlibs/ctemplate $(CTEMPLATE_LIB)
+	$(BOOST_PROGRAM_OPTIONS_LIBS) $(WIN32_LIBS) 
 
 LIBS = $(DEPS_LIBS)  
 
 # add the search path to the linker path 
-solarpowerlog_LDFLAGS = $(pwd) -L../extlibs/ctemplate $(DBIXX_LIB_PATH)
+solarpowerlog_LDFLAGS = $(pwd) $(DBIXX_LIB_PATH)
 
 # rule to make the ctemplate library 
-libctemplate.a: 
-	(cd ../extlibs/ctemplate/ && $(MAKE))  
+#libctemplate.a: 
+#	(cd ../extlibs/ctemplate/ && $(MAKE))  
 
 # rule to clean up local stuff, like the ctemplate library 
-clean-local: libctemplateclean
-
-libctemplateclean:
-	(cd ../extlibs/ctemplate/ && $(MAKE) clean)  
-
+#clean-local: libctemplateclean
+#
+#libctemplateclean:
+#	(cd ../extlibs/ctemplate/ && $(MAKE) clean)  
+#
 # do not forget to make the template library 
-all: ${CTEMPLATE_DEPS}
+#all: ${CTEMPLATE_DEPS}
